@startuml
class main.java.com.lab111.labwork4.PointPrimitive {
- int x
- int y
+ void setX(int)
+ void setY(int)
+ int getX()
+ int getY()
}
interface main.java.com.lab111.labwork4.Point {
~ void setX(int)
~ void setY(int)
~ int getX()
~ int getY()
}
class main.java.com.lab111.labwork4.PointToLineAdapter {
- Point startPoint
- Point endPoint
- double x1
- double y1
- double x2
- double y2
- double X
- double Y
+ void setY(double)
+ void setX(double)
+ void draw()
}
interface main.java.com.lab111.labwork4.GraphicObject {
~ void setY(double)
~ void setX(double)
~ void draw()
}
class main.java.com.lab111.labwork4.Line {
- double X
- double Y
+ void setY(double)
+ void setX(double)
+ void draw()
}


main.java.com.lab111.labwork4.Point <|.. main.java.com.lab111.labwork4.PointPrimitive
main.java.com.lab111.labwork4.GraphicObject <|.. main.java.com.lab111.labwork4.PointToLineAdapter
main.java.com.lab111.labwork4.GraphicObject <|.. main.java.com.lab111.labwork4.Line
main.java.com.lab111.labwork4.PointToLineAdapter o-- main.java.com.lab111.labwork4.Point
@enduml